--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = napari-plugin-precommit
+name = napari-plugin-checks
 version = 0.1.0
 description = basic checks for napari plugins
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/tlambert03/napari-plugin-precommit
+url = https://github.com/tlambert03/napari-plugin-checks
 author = Talley Lambert
 author_email = talley.lambert@gmail.com
 license = MIT
@@ -21,12 +21,13 @@ classifiers =
     Programming Language :: Python :: Implementation :: CPython
 
 [options]
-py_modules = napari_plugin_precommit
+py_modules = napari_plugin_checks
+install_requires = grimp
 python_requires = >=3.6
 
 [options.entry_points]
 console_scripts =
-    napari-plugin-precommit=napari_plugin_precommit:main
+    napari-plugin-check=napari_plugin_checks:main
 
 [options.extras_require]
 tests =
