--- a/setup.cfg
+++ b/setup.cfg
@@ -31,15 +31,16 @@ console_scripts =
 
 [options.extras_require]
 tests =
-    covdefaults
-    coverage
+    pytest-cov
     pytest
 
 [bdist_wheel]
 universal = True
 
-[coverage:run]
-plugins = covdefaults
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    if __name__ == .__main__.:
 
 [mypy]
 check_untyped_defs = true
