--- a/tox.ini
+++ b/tox.ini
@@ -4,15 +4,9 @@ toxworkdir = /tmp/.tox
 
 [testenv]
 extras = tests
-commands =
-    coverage erase
-    coverage run -m pytest {posargs:tests}
-    coverage report --fail-under 100
+commands = pytest --cov napari_plugin_checks --cov-report xml --cov-report term --cov-fail-under 100
 
 [testenv:pre-commit]
 skip_install = true
 deps = pre-commit
 commands = pre-commit run --all-files --show-diff-on-failure
-
-[pep8]
-ignore = E265,E501,W504
