--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,20 @@
 [tox]
-envlist = py36,py37,py38,pypy3,pre-commit
+envlist =  py{37,38,39,310}-{linux,macos,windows}
 toxworkdir = /tmp/.tox
+
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310
+
+[gh-actions:env]
+PLATFORM =
+    ubuntu-latest: linux
+    macos-latest: macos
+    windows-latest: windows
 
 [testenv]
 extras = tests
 commands = pytest --cov napari_plugin_checks --cov-report xml --cov-report term --cov-fail-under 100
-
-[testenv:pre-commit]
-skip_install = true
-deps = pre-commit
-commands = pre-commit run --all-files --show-diff-on-failure
