--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = napari-plugin-checks
+name = napari_plugin_checks
 version = 0.2.0
 description = basic checks for napari plugins
 long_description = file: README.md
@@ -22,7 +22,8 @@ classifiers =
 
 [options]
 py_modules = napari_plugin_checks
-install_requires = grimp
+install_requires =
+    grimp
 python_requires = >=3.6
 
 [options.entry_points]
@@ -31,8 +32,8 @@ console_scripts =
 
 [options.extras_require]
 tests =
-    pytest-cov
     pytest
+    pytest-cov
 
 [bdist_wheel]
 universal = True
@@ -56,3 +57,13 @@ disallow_untyped_defs = false
 
 [mypy-tests.*]
 disallow_untyped_defs = false
+
+[flake8]
+exclude = docs,_version.py,.eggs,examples
+max-line-length = 88
+docstring-convention = numpy
+ignore = D100, D213, D401, D413, D107, W503
+
+[isort]
+profile = black
+src_paths = {{cookiecutter.project_slug}}
