--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ classifiers =
 [options]
 py_modules = napari_plugin_checks
 install_requires =
-    grimp
+    grimp==1.3.0
 python_requires = >=3.6
 
 [options.entry_points]
